--- a/portfolio.css
+++ b/portfolio.css
@@ -178,6 +178,8 @@
 
 .perso-info{
     display: inline-block;
+    margin-left: 100px;
+    vertical-align: top;
 }
 
 .perso-name{
@@ -186,4 +188,12 @@
     font-size: 48px;
     font-weight: 800;
     vertical-align: top;
+}
+
+.perso-content{
+    color: rgba(255, 255, 255, 0.50);
+    font-family: 'Raleway', sans-serif;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: bold;
 }
