--- a/portfolio.css
+++ b/portfolio.css
@@ -156,12 +156,12 @@
 
 .aboutme-pic{
     display: inline-block;
-    height: 400px;
+    vertical-align: top;
+    height: 500px;
 }
 
 .aboutme-title{
     vertical-align: top;
-    margin-left: 500px;
     width: 160px;
     height: 45px;
     border-radius: 16px;
