--- a/portfolio.css
+++ b/portfolio.css
@@ -151,7 +151,8 @@
 .about-me{
     align-items: center;
     margin: 50px;
-    margin-top: 100px;
+    padding-top: 100px;
+    padding-bottom: 100px;
 }
 
 .aboutme-pic{
@@ -196,4 +197,79 @@
     font-size: 18px;
     font-style: normal;
     font-weight: bold;
+}
+
+.edu{
+    align-items: center;
+    margin: 50px;
+    padding-top: 100px;
+    padding-bottom: 100px;
+}
+
+.edu-title{
+    height: 45px;
+    background: rgba(123, 74, 226, 0.10);
+    display: flex;
+    width: 160px;
+    height: 36px;
+    flex-direction: column;
+    justify-content: center;
+    color: #7B4AE2;
+    text-align: center;
+    font-family: 'Raleway', sans-serif;
+    font-size: 20px;
+    font-weight: 700;
+    border-radius: 16px;
+    margin-left: 550px;
+    margin-bottom: 30px;
+}
+
+.edu-content{
+    margin-top: 50px;
+    display: inline-block;
+    vertical-align: top;
+    margin-left: 50px;
+}
+
+.edu-logo{
+    display: inline-block;
+    width: 120px;
+    margin-right: 60px;
+    margin-top: 10px;
+}
+
+.edu-box{
+    width: 320px;
+    height: 100px;
+    border-radius: 16px;
+    border: 1px solid rgba(123, 74, 226, 0.50);
+    display: inline-block;
+    vertical-align: top;
+    padding: 20px;
+}
+
+.edu-school{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    color: #FFF;
+    font-family: 'Raleway', sans-serif;
+    font-size: 17px;
+    font-weight: 700;
+    margin: 0;
+}
+
+.edu-level{
+    color: rgba(255, 255, 255, 0.50);
+    font-family: 'Raleway', sans-serif;
+    font-size: 16px;
+}
+
+.edu-year{
+    color: #7B4AE2;
+    text-align: right;
+    font-family: 'Raleway', sans-serif;
+    font-size: 18px;
+    font-weight: bold;
+    margin-top: 32px;
 }
