--- a/portfolio.css
+++ b/portfolio.css
@@ -47,10 +47,47 @@
 .navigation li{
     list-style: none;
     display: inline-block;
+    position: relative;
+}
+
+.navigation a {
+    text-decoration: none;
 }
 
 .nav:hover,
 .nav.active {
+    color: #7B4AE2;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    background-color: rgba(123, 74, 226, 0.10);
+    padding: 10px;
+    color: rgba(255, 255, 255, 0.50);
+    font-family: 'Raleway', sans-serif;
+    font-size: 18px;
+    font-weight: 400;
+    text-decoration: none;
+    transition: color 0.3s;
+}
+
+.dropdown-content li {
+    display: block;
+    margin-bottom: 15px;
+}
+
+.navigation li:hover .dropdown-content {
+    display: block;
+}
+
+.navigation li:hover .dropdown-content a {
+    color: rgba(255, 255, 255, 0.50);
+}
+
+.navigation li:hover .dropdown-content a:hover {
     color: #7B4AE2;
 }
 
@@ -202,7 +239,6 @@
 .edu{
     align-items: center;
     margin: 50px;
-    padding-top: 100px;
     padding-bottom: 100px;
 }
 
@@ -211,7 +247,7 @@
     background: rgba(123, 74, 226, 0.10);
     display: flex;
     width: 160px;
-    height: 36px;
+    height: 45px;
     flex-direction: column;
     justify-content: center;
     color: #7B4AE2;
@@ -221,7 +257,7 @@
     font-weight: 700;
     border-radius: 16px;
     margin-left: 550px;
-    margin-bottom: 30px;
+    margin-bottom: 50px;
 }
 
 .edu-content{
@@ -273,3 +309,4 @@
     font-weight: bold;
     margin-top: 32px;
 }
+
