--- a/portfolio.css
+++ b/portfolio.css
@@ -12,7 +12,7 @@
 
 .logo{
     display: inline-block;
-    margin-right: 800px;
+    margin-right: 740px;
     color: rgba(255, 255, 255, 0.50);
     font-family: 'Raleway', sans-serif;
 }
@@ -77,6 +77,10 @@
 .dropdown-content li {
     display: block;
     margin-bottom: 15px;
+}
+
+.dropdown-content li:last-child {
+    margin-bottom: 5px;
 }
 
 .navigation li:hover .dropdown-content {
