--- a/portfolio.css
+++ b/portfolio.css
@@ -243,6 +243,7 @@
 .edu{
     align-items: center;
     margin: 50px;
+    padding-top: 50px;
     padding-bottom: 100px;
 }
 
@@ -260,7 +261,7 @@
     font-size: 20px;
     font-weight: 700;
     border-radius: 16px;
-    margin-left: 550px;
+    margin-left: 580px;
     margin-bottom: 50px;
 }
 
@@ -268,13 +269,13 @@
     margin-top: 50px;
     display: inline-block;
     vertical-align: top;
-    margin-left: 50px;
+    margin-left: 70px;
 }
 
 .edu-logo{
     display: inline-block;
     width: 120px;
-    margin-right: 60px;
+    margin-right: 50px;
     margin-top: 10px;
 }
 
@@ -312,5 +313,58 @@
     font-size: 18px;
     font-weight: bold;
     margin-top: 32px;
+}
+
+.skills{
+    align-items: center;
+    margin: 50px;
+    padding-top: 50px;
+    padding-bottom: 100px;
+}
+
+.skills-title{
+    vertical-align: top;
+    width: 120px;
+    height: 45px;
+    border-radius: 16px;
+    background: rgba(123, 74, 226, 0.10);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 700;
+    font-family: 'Raleway', sans-serif;
+    color: #7B4AE2;
+    margin-left: 600px;
+}
+
+.skills-name{
+    color: #FFF;
+    font-family: 'Raleway', sans-serif;
+    font-size: 40px;
+    font-weight: 800;
+    text-align: center;
+    margin-top: 10px;
+    margin-bottom: 60px;
+}
+
+.skills-sub{
+    color: rgba(255, 255, 255, 0.50);
+    text-align: center;
+    font-family: 'Raleway', sans-serif;
+    font-size: 22px;
+}
+
+.skills-logos{
+    list-style: none;
+    display: inline-block;
+    vertical-align: top;
+    margin-left: 450px;
+    margin-bottom: 50px;
+}
+
+.skills-list li{
+    list-style: none;
 }
 
