--- a/portfolio.css
+++ b/portfolio.css
@@ -237,7 +237,7 @@
     font-family: 'Raleway', sans-serif;
     font-size: 18px;
     font-style: normal;
-    font-weight: bold;
+    font-weight: normal;
 }
 
 .edu{
