--- a/portfolio.css
+++ b/portfolio.css
@@ -8,13 +8,15 @@
     margin: 32px;
     border-radius: 16px;
     background: rgba(123, 74, 226, 0.10);
+    display: flex;
+    align-items: center;
 }
 
 .logo{
-    display: inline-block;
-    margin-right: 740px;
+    display: flex;
+    width: 80px;
+    margin-right: 700px;
     color: rgba(255, 255, 255, 0.50);
-    font-family: 'Raleway', sans-serif;
 }
 
 /*.nav{ if visited
@@ -31,8 +33,6 @@
 }*/
 
 .nav{
-    display: flex;
-    height: 63px;
     margin-right: 40px;
     flex-direction: column;
     justify-content: center;
@@ -47,6 +47,7 @@
 .navigation li{
     list-style: none;
     display: inline-block;
+    vertical-align: middle;
     position: relative;
 }
 
@@ -123,7 +124,6 @@
     font-size: 20px;
     font-weight: 700;
     display: flex;
-    /*--width: 110px;-->*/
     width: 140px;
     height: 36px;
     flex-direction: column;
