--- a/portfolio.css
+++ b/portfolio.css
@@ -171,6 +171,10 @@
     margin-bottom: 10px;
 }
 
+.comm a{
+    text-decoration: none;
+}
+
 .email{
     border-radius: 16px;
     text-align: center;
@@ -183,6 +187,11 @@
     width: 200px;
     font-weight: 550;
     text-decoration: none;
+    transition: background-color 0.3s ease; 
+}
+
+.email:hover {
+    background-color: rgba(123, 74, 226, 0.20); 
 }
 
 .email p{
@@ -448,6 +457,11 @@
     width: 150px; 
 }
 
+.row2{
+    margin-top: 30px;
+    margin-left: 170px;
+}
+
 .projects-title{
     vertical-align: top;
     width: 150px;
@@ -519,6 +533,62 @@
     bottom: 100px;
 }
 
+.row{
+    margin-left: 300px;
+}
+
+.column {
+    float: left;
+    width: 25%;
+    padding: 10px;
+}
+
+.column img {
+    opacity: 0.8; 
+    cursor: pointer; 
+    height: 150px;
+}
+  
+.column img:hover {
+    opacity: 1;
+}
+
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+  
+.proj-container2 {
+    position: relative;
+    display: none;
+    margin-top: 30px;
+}
+
+.expanded-img{
+    height: 500px;
+    margin-left: 270px;
+}
+
+#imgtext {
+    margin-top: 10px;
+    bottom: 15px;
+    left: 15px;
+    color: rgba(255, 255, 255, 0.80);
+    font-size: 20px;
+    font-family: 'Raleway', sans-serif;
+    text-align: center;
+}
+
+.closebtn {
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    color: white;
+    font-size: 35px;
+    cursor: pointer;
+}
+
 .interests-name:hover {
     color: #7B4AE2;
 }
@@ -569,4 +639,81 @@
     transform: translate(-50%, -50%);
     text-align: center;
     font-family: 'Raleway', sans-serif;
+}
+
+.interests-gallery{
+    padding-top: 50px;
+}
+
+.gallery-container{
+    overflow-x: scroll;
+    scroll-snap-type: x mandatory;
+    white-space: nowrap;
+    margin-left: 50px;
+}
+
+.gallery-title{
+    height: 45px;
+    background: rgba(123, 74, 226, 0.10);
+    display: flex;
+    width: 140px;
+    height: 45px;
+    flex-direction: column;
+    justify-content: center;
+    color: #7B4AE2;
+    text-align: center;
+    font-family: 'Raleway', sans-serif;
+    font-size: 20px;
+    font-weight: 700;
+    border-radius: 16px;
+    margin-left: 640px;
+    margin-bottom: 50px;
+}
+
+.gallery-list{
+    list-style: none;
+    display: flex;
+    scroll-snap-align: center;
+}
+
+.gallery-list img{
+    height: 400px;
+    margin-right: 10px;
+}
+
+.gallery-name{
+    color: #FFF;
+    font-family: 'Raleway', sans-serif;
+    font-size: 20px;
+    font-weight: 800;
+    text-align: center;
+    margin-top: 40px;
+    text-decoration: none;
+    bottom: 100px;
+    transition: color 0.3s ease;
+}
+
+.gallery-container2{
+    overflow-x: scroll;
+    scroll-snap-type: x mandatory;
+    white-space: nowrap;
+    margin-left: 50px;
+}
+
+.gallery-container3{
+    overflow-x: scroll;
+    scroll-snap-type: x mandatory;
+    white-space: nowrap;
+    margin-left: 50px;
+}
+
+.gallery-list2{
+    list-style: none;
+    display: flex;
+    scroll-snap-align: center;
+}
+
+.gallery-list2 img{
+    height: 200px;
+    margin-right: 10px;
 }
