--- a/styles.css
+++ b/styles.css
@@ -633,14 +633,6 @@ video {
   margin-right: auto;
 }
 
-.mb-10{
-  margin-bottom: 2.5rem;
-}
-
-.mb-5{
-  margin-bottom: 1.25rem;
-}
-
 .ml-10{
   margin-left: 2.5rem;
 }
@@ -651,10 +643,6 @@ video {
 
 .ms-2\.5{
   margin-inline-start: 0.625rem;
-}
-
-.mt-10{
-  margin-top: 2.5rem;
 }
 
 .mt-4{
@@ -701,40 +689,16 @@ video {
   height: 0.625rem;
 }
 
+.h-48{
+  height: 12rem;
+}
+
 .h-5{
   height: 1.25rem;
 }
 
-.h-full{
-  height: 100%;
-}
-
 .h-screen{
   height: 100vh;
-}
-
-.h-24{
-  height: 6rem;
-}
-
-.h-9{
-  height: 2.25rem;
-}
-
-.h-44{
-  height: 11rem;
-}
-
-.h-52{
-  height: 13rem;
-}
-
-.h-56{
-  height: 14rem;
-}
-
-.h-48{
-  height: 12rem;
 }
 
 .max-h-\[600px\]{
@@ -781,10 +745,6 @@ video {
   cursor: pointer;
 }
 
-.grid-cols-3{
-  grid-template-columns: repeat(3, minmax(0, 1fr));
-}
-
 .flex-col{
   flex-direction: column;
 }
@@ -803,10 +763,6 @@ video {
 
 .justify-between{
   justify-content: space-between;
-}
-
-.gap-5{
-  gap: 1.25rem;
 }
 
 .gap-3{
@@ -832,10 +788,6 @@ video {
 
 .overflow-x-auto{
   overflow-x: auto;
-}
-
-.whitespace-nowrap{
-  white-space: nowrap;
 }
 
 .rounded{
@@ -879,10 +831,6 @@ video {
      object-fit: cover;
 }
 
-.p-10{
-  padding: 2.5rem;
-}
-
 .p-2{
   padding: 0.5rem;
 }
@@ -893,6 +841,11 @@ video {
 
 .p-4{
   padding: 1rem;
+}
+
+.px-10{
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
 }
 
 .px-3{
@@ -910,27 +863,13 @@ video {
   padding-bottom: 0.5rem;
 }
 
-.px-10{
-  padding-left: 2.5rem;
-  padding-right: 2.5rem;
-}
-
 .py-5{
   padding-top: 1.25rem;
   padding-bottom: 1.25rem;
 }
 
-.text-center{
-  text-align: center;
-}
-
 .align-top{
   vertical-align: top;
-}
-
-.text-3xl{
-  font-size: 1.875rem;
-  line-height: 2.25rem;
 }
 
 .text-5xl{
@@ -941,11 +880,6 @@ video {
 .text-sm{
   font-size: 0.875rem;
   line-height: 1.25rem;
-}
-
-.text-xl{
-  font-size: 1.25rem;
-  line-height: 1.75rem;
 }
 
 .font-bold{
@@ -973,11 +907,6 @@ video {
 .text-gray-900{
   --tw-text-opacity: 1;
   color: rgb(17 24 39 / var(--tw-text-opacity));
-}
-
-.text-green-600{
-  --tw-text-opacity: 1;
-  color: rgb(22 163 74 / var(--tw-text-opacity));
 }
 
 .text-white{
@@ -1704,6 +1633,70 @@ body{
   -ms-transform: translate(-50%, -50%);
 }
 
+#orgs{
+  margin: 50px;
+  align-items: center;
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+
+.orgs-title{
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 50px;
+  display: flex;
+  height: 45px;
+  width: 13rem;
+  flex-direction: column;
+  justify-content: center;
+  border-radius: 1rem;
+  text-align: center;
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+  font-weight: 700;
+  --tw-text-opacity: 1;
+  color: rgb(123 74 226 / var(--tw-text-opacity));
+  background: rgba(123, 74, 226, 0.1);
+}
+
+.orgs-box{
+  display: inline-block;
+  height: 150px;
+  width: 20rem;
+  border-radius: 1rem;
+  border-width: 1px;
+  border-style: solid;
+  border-color: rgba(123,74,226,0.50);
+  padding: 1.25rem;
+  vertical-align: top;
+}
+
+.orgs-year{
+  margin-top: 1rem;
+  text-align: right;
+  font-family: bold;
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+  --tw-text-opacity: 1;
+  color: rgb(123 74 226 / var(--tw-text-opacity));
+}
+
+.orgs-logo{
+  margin-right: 50px;
+  margin-top: 0.625rem;
+  display: inline-block;
+  width: 130px;
+  transition-property: width;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+  transition-duration: 0.3s;
+  transition-timing-function: ease;
+}
+
+.orgs-logo:hover{
+  width: 150px;
+}
+
 .hover\:bg-gray-100:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
@@ -1872,4 +1865,3 @@ body{
     }
   }
 }
-  
